tests/fixtures/errors/ctor_arg_type.z
# E0300: a constructor argument whose value type does not match the field.
Widget: class {
    id: u64
}
main: function is {
    w: Widget id: "not a number"
    print "\{w.id}"
}
